# Advanced_Robotics

./: README.md
P1/: P1D1_hayden_cameron.tar  P1D2_hayden_cameron.tar  README.md
P1/drawN_ws/: README.md
P1/drawN_ws/install/: local_setup.sh  setup.sh
P1/drawN_ws/install/turtlesim/lib/turtlesim/: turtle_teleop_key
P1/drawN_ws/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
P1/drawN_ws/log/: latest_build
P1/drawN_ws/src/: setup.sh
P1/drawN_ws/src/P1D2_hayden_cameron/: package.xml  setup.cfg  setup.py
P1/drawN_ws/src/P1D2_hayden_cameron/P1D2_hayden_cameron/: P1D2_hayden_cameron.py
P1/drawN_ws/src/my_package/: package.xml  setup.py
P1/tars/: P1D2_hayden_cameron.tar
P1/turtlebot3_ws/: README.md  map.pgm  my_turtlebot3_setup.sh
P1/turtlebot3_ws/install/: local_setup.sh  setup.sh
P1/turtlebot3_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
P1/turtlebot3_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
P1/turtlebot3_ws/log/: latest_build
P1/turtlebot3_ws/src/: my_turtlebot3_setup.sh
src/P1D2_hayden_cameron/: package.xml  setup.py
src/turtlesim_draw_n/: package.xml  setup.cfg  setup.py
(+495 files in other folders)
